--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.74.2"
   },
   "devDependencies": {
+    "@rnx-kit/react-native-host": "^0.4.10",
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
